--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="photo-frame">
                 <img src="foto3.jpg" alt="Bandara Surabaya">
             </div>
-            <p>Bandara Surabaya jadi saksi bisu perjalanan kita. Ke manapun tujuannya, selama perginya berdua sama kamu, rasanya selalu seperti pulang ke rumah.</p>
+            <p>Bandara Surabaya jadi saksi bisu perjalanan kita. Meskipun saat itu kita harus sejenak berpisah, namun kamu membuatku ingin cepat kembali bertemu, rasanya selalu ingin pulang ke rumah.</p>
         </section>
 
         <section class="story-section">
@@ -204,7 +204,7 @@
             <div class="photo-frame">
                 <img src="foto5.jpg" alt="Pemberkatan">
             </div>
-            <p>Hari yang paling bersejarah. Di altar GBI Getsemani, di hadapan Tuhan dan jemaat-Nya, janji suci kita ucapkan. Hari di mana 'aku' dan 'kamu' sah menjadi 'KITA'.</p>
+            <p>Hari yang paling bersejarah. Di altar GBI Getsemani, di hadapan Tuhan dan jemaat-Nya, janji suci kita ucapkan. Hari di mana 'aku' dan 'kamu' sah menjadi 'SATU'.</p>
         </section>
 
         <section class="story-section">
@@ -232,7 +232,7 @@
             <div class="photo-frame">
                 <img src="foto9.jpg" alt="Keluarga Besar">
             </div>
-            <p>Kebahagiaan kita makin lengkap dengan hangatnya dukungan keluarga besar dari Kediri. Rumah kita dipenuhi tawa, doa, dan kasih sayang yang melimpah.</p>
+            <p>Kebahagiaan kita makin lengkap dengan hangatnya dukungan keluarga besar dari Kediri. Kita dipenuhi tawa, doa, dan kasih sayang yang melimpah.</p>
         </section>
 
         <section class="story-section">
